[tool.poetry]
name = "poker"
version = "0.1.0"
description = "Calcul de probabilité au texam hold em!"
authors = ["Hadrien Chicault"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
